<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/filter_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/filter_all_time"
            style="@style/filter_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/round_bg_filter_selected"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:text="@string/filter_all_time"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filter_week"
            style="@style/filter_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/round_bg_filter_selected"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:text="@string/filter_week"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/filter_all_time"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filter_month"
            style="@style/filter_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/round_bg_filter_selected"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:text="@string/filter_month"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/filter_week"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filter_time_range"
            style="@style/filter_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/round_bg_filter_selected"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:text="@string/filter_time_range"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/filter_week"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filter_currency_name"
            style="@style/filter_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/round_bg_filter_selected"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:text="@string/filter_currency_name"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/filter_week"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_wrapper" />

</androidx.constraintlayout.widget.ConstraintLayout>