<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="8dp">

    <TextView
        android:id="@+id/date"
        style="@style/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:text="@string/date" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/block_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/round_bg_currency"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/currency_name_parent"
            style="@style/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency" />

        <TextView
            android:id="@+id/currency_value_parent"
            style="@style/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/currency_value" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:src="@drawable/ic_exchange" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/block_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_bg_currency"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/currency_name_child"
            style="@style/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency" />

        <TextView
            android:id="@+id/currency_value_child"
            style="@style/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/currency_value" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>